--- a/angular02/src/app/header/header.component.html
+++ b/angular02/src/app/header/header.component.html
@@ -11,7 +11,7 @@
     </ul>
 
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#">
           <i class="far fa-comments"></i>
           <span class="badge badge-danger navbar-badge">3</span>
@@ -72,9 +72,8 @@
             >See All Messages</a
           >
         </div>
-      </li>
-
-      <li class="nav-item dropdown">
+      </li> -->
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#">
           <i class="far fa-bell"></i>
           <span class="badge badge-warning navbar-badge">15</span>
@@ -101,6 +100,9 @@
             >See All Notifications</a
           >
         </div>
-      </li>
+      </li> -->
+    <button class="btn btn-outline-danger" (click)="sair()">Sair</button>
+    <i class="fas fa-times"></i>
     </ul>
+
   </nav>
